--- a/packages/roles-api/package.json
+++ b/packages/roles-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles-api",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "",
   "main": "./index",
   "repository": {
