--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "directories": {
@@ -25,14 +25,14 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/base-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/ng": "0.0.0-PLACEHOLDER",
-    "@typexs/forms-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/forms": "0.0.0-PLACEHOLDER",
-    "@typexs/entity": "0.0.0-PLACEHOLDER",
-    "@typexs/entity-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/auth": "0.0.0-PLACEHOLDER",
-    "@typexs/ng-theme-base": "0.0.0-PLACEHOLDER"
+    "@typexs/base-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/forms": "*",
+    "@typexs/entity": "*",
+    "@typexs/entity-ng": "*",
+    "@typexs/auth": "*",
+    "@typexs/ng-theme-base": "*"
   },
   "devDependencies": {
     "@angular/core": "v12-lts",
