--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/auth",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "Auth module for typexs",
   "main": "index",
   "browser": "browser",
@@ -20,16 +20,16 @@
     "auth"
   ],
   "dependencies": {
-    "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/entity": "0.0.0-PLACEHOLDER",
-    "@typexs/roles": "0.0.0-PLACEHOLDER",
-    "@typexs/ng": "0.0.0-PLACEHOLDER",
-    "@typexs/roles-api": "0.0.0-PLACEHOLDER",
+    "@typexs/base": "*",
+    "@typexs/entity": "*",
+    "@typexs/roles": "*",
+    "@typexs/ng": "*",
+    "@typexs/roles-api": "*",
     "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1"
   },
   "peerDependencies": {
-    "@typexs/server": "0.0.0-PLACEHOLDER"
+    "@typexs/server": "*"
   },
   "private": true,
   "typexs": {
