--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/base",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "",
   "main": "index",
   "browser": "browser",
