--- a/packages/ng-admin-ui/package.json
+++ b/packages/ng-admin-ui/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-admin-ui",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "directories": {
@@ -25,15 +25,15 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@typexs/base-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/forms-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/ng-router-menu": "0.0.0-PLACEHOLDER",
-    "@typexs/ng-theme-base": "0.0.0-PLACEHOLDER",
-    "@typexs/storage-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/tasks-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/ng": "0.0.0-PLACEHOLDER",
-    "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/server": "0.0.0-PLACEHOLDER"
+    "@typexs/base-ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/ng-router-menu": "*",
+    "@typexs/ng-theme-base": "*",
+    "@typexs/storage-ng": "*",
+    "@typexs/tasks-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/base": "*",
+    "@typexs/server": "*"
   },
   "devDependencies": {
     "@angular/core": "v12-lts",
