--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/notification",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "main": "index",
   "browser": "browser",
   "private": true,
@@ -8,7 +8,7 @@
     "name": "pipeline"
   },
   "peerDependencies": {
-    "@typexs/base": "0.0.0-PLACEHOLDER",
+    "@typexs/base": "*",
     "winston-transport": "^4.4.0"
   }
 }
