--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "",
   "main": "./index",
   "browser": "./browser",
@@ -16,12 +16,12 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "0.0.0-PLACEHOLDER",
+    "@typexs/roles-api": "*",
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/entity": "0.0.0-PLACEHOLDER"
+    "@typexs/base": "*",
+    "@typexs/entity": "*"
   },
   "private": true,
   "typexs": {
