--- a/packages/tasks-ng/package.json
+++ b/packages/tasks-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/tasks-ng",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "2.2.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "directories": {
@@ -25,10 +25,10 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@typexs/base": "0.0.0-PLACEHOLDER",
-    "@typexs/base-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/forms-ng": "0.0.0-PLACEHOLDER",
-    "@typexs/storage-ng": "0.0.0-PLACEHOLDER"
+    "@typexs/base": "*",
+    "@typexs/base-ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/storage-ng": "*"
   },
   "devDependencies": {
     "@angular/core": "v12-lts",
