--- a/packages/entity-ng/package.json
+++ b/packages/entity-ng/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
+    "@typexs/base": "*",
     "@typexs/base-ng": "*",
+    "@typexs/forms": "*",
     "@typexs/forms-ng": "*",
     "@typexs/ng": "*",
     "@typexs/entity": "*"
@@ -36,6 +38,12 @@
     "@angular/forms": "v12-lts",
     "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
+    "@typexs/base": "*",
+    "@typexs/base-ng": "*",
+    "@typexs/forms": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/entity": "*",
     "rxjs": "6.6.7"
   }
 }
