--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -27,7 +27,11 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/base": "*"
+    "@typexs/base": "*",
+    "@typexs/entity": "*"
+  },
+  "devDependencies": {
+    "@typexs/testing": "*"
   },
   "peerDependencies": {
   },
