--- a/packages/pipelines/package.json
+++ b/packages/pipelines/package.json
@@ -10,6 +10,9 @@
   "peerDependencies": {
     "@typexs/base": "*"
   },
+  "devDependencies": {
+    "@typexs/base": "*"
+  },
   "typexs": {
     "name": "pipelines",
     "declareLibs": [
