--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -32,13 +32,25 @@
     "@typexs/entity": "*",
     "@typexs/entity-ng": "*",
     "@typexs/auth": "*",
-    "@typexs/ng-theme-base": "*"
+    "@typexs/ng-theme-base": "*",
+    "@typexs/roles-api": "*"
   },
   "devDependencies": {
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
+    "@typexs/base-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/forms": "*",
+    "@typexs/entity": "*",
+    "@typexs/entity-ng": "*",
+    "@typexs/auth": "*",
+    "@typexs/ng-theme-base": "*",
+    "@typexs/roles-api": "*",
+    "@typexs/roles": "*",
+    "@typexs/server": "*",
     "rxjs": "6.6.7"
   }
 }
