--- a/packages/base-ng/package.json
+++ b/packages/base-ng/package.json
@@ -34,6 +34,9 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
+    "@typexs/base": "*",
+    "@typexs/ng": "*",
+    "@typexs/server": "*",
     "rxjs": "6.6.7"
   }
 }
