--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./build"
+  },
+  "include": [
+    "./src"
+  ]
 }
