--- a/packages/ng-admin-ui/package.json
+++ b/packages/ng-admin-ui/package.json
@@ -39,6 +39,15 @@
     "@angular/core": "v12-lts",
     "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
+    "@typexs/base-ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/ng-router-menu": "*",
+    "@typexs/ng-theme-base": "*",
+    "@typexs/storage-ng": "*",
+    "@typexs/tasks-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/base": "*",
+    "@typexs/server": "*",
     "rxjs": "6.6.7"
   }
 }
