--- a/packages/search-ng/package.json
+++ b/packages/search-ng/package.json
@@ -27,6 +27,10 @@
     "@angular/router": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
+    "@typexs/search": "*",
+    "@typexs/base-ng": "*",
+    "@typexs/storage-ng": "*",
+    "@typexs/forms-ng": "*",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   }
