--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,13 @@
   "dependencies": {
     "@typexs/roles-api": "*"
   },
+  "devDependencies": {
+    "@typexs/base": "*",
+    "class-transformer": "0.3.1",
+    "class-validator": "0.12.2",
+    "routing-controllers": "0.9.0",
+    "@typexs/testing": "*"
+  },
   "peerDependencies": {
     "@typexs/base": "*",
     "class-transformer": "0.3.1",
