--- a/packages/storage-ng/package.json
+++ b/packages/storage-ng/package.json
@@ -37,6 +37,12 @@
     "@angular/router": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
+    "@typexs/base": "*",
+    "@typexs/ng": "*",
+    "@typexs/storage": "*",
+    "@typexs/base-ng": "*",
+    "@typexs/forms": "*",
+    "@typexs/forms-ng": "*",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   }
