--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "0.0.0",
-  "contents": "src"
+  "version": "independent",
+  "contents": "src",
+  "independent": true
 }
