--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "npx concurrently \"cd packages/app && npx ng serve\" \"npx typexs server --nodeId server\"",
     "postinstall": "npx lerna link",
+    "test": "npx lerna run test --concurrency=1",
+    "build": "npx lerna run build",
     "documentation": "npx gulp docs-generate",
     "documentation:watch": "npx gulp watch-doc"
   },
