--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -4,6 +4,10 @@
   "version": "2.2.0",
   "description": "Angular for typexs",
   "main": "public_api.ts",
+  "scripts": {
+    "test": "ng test auth-ng --code-coverage=true --watch=false",
+    "build": "ng build auth-ng"
+  },
   "directories": {
     "doc": "docs/de"
   },
