--- a/packages/storage-ng/package.json
+++ b/packages/storage-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/storage-ng",
-  "version": "2.2.0",
+  "version": "2.2.1-alpha.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -30,23 +30,23 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@typexs/base": "*",
-    "@typexs/ng": "*",
-    "@typexs/storage": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/forms-ng": "*"
-  },
-  "devDependencies": {
-    "@angular/common": "v12-lts",
-    "@angular/router": "v12-lts",
-    "@angular/core": "v12-lts",
-    "@angular/forms": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/ng": "*",
-    "@typexs/storage": "*",
     "@typexs/base-ng": "*",
     "@typexs/forms": "*",
     "@typexs/forms-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/storage": "*"
+  },
+  "devDependencies": {
+    "@angular/common": "v12-lts",
+    "@angular/core": "v12-lts",
+    "@angular/forms": "v12-lts",
+    "@angular/router": "v12-lts",
+    "@typexs/base": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-alpha.0",
+    "@typexs/forms": "^2.2.1-alpha.0",
+    "@typexs/forms-ng": "^2.2.1-alpha.0",
+    "@typexs/ng": "^2.2.1-alpha.0",
+    "@typexs/storage": "^2.2.1-alpha.0",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   }
