--- a/packages/distributed-storage/package.json
+++ b/packages/distributed-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/distributed-storage",
-  "version": "2.2.0",
+  "version": "2.2.1-alpha.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -19,13 +19,13 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "*"
+    "@typexs/roles-api": "^2.2.1-alpha.0"
   },
   "devDependencies": {
-    "@typexs/base": "*",
-    "@typexs/pipelines": "*",
-    "@typexs/server": "*",
-    "@typexs/testing": "*"
+    "@typexs/base": "^2.2.1-alpha.0",
+    "@typexs/pipelines": "^2.2.1-alpha.0",
+    "@typexs/server": "^2.2.1-alpha.0",
+    "@typexs/testing": "^2.2.1-alpha.0"
   },
   "peerDependencies": {
     "@typexs/base": "*",
