--- a/packages/forms-ng/package.json
+++ b/packages/forms-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/forms-ng",
-  "version": "2.2.0",
+  "version": "2.2.1-alpha.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -34,14 +34,14 @@
     "@typexs/forms": "*"
   },
   "devDependencies": {
+    "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
-    "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/entity": "*",
+    "@typexs/base": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-alpha.0",
+    "@typexs/entity": "^2.2.1-alpha.0",
+    "@typexs/forms": "^2.2.1-alpha.0",
     "rxjs": "6.6.7"
   }
 }
