--- a/packages/tasks-ng/package.json
+++ b/packages/tasks-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/tasks-ng",
-  "version": "2.2.0",
+  "version": "2.2.1-alpha.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -22,21 +22,21 @@
   ],
   "peerDependencies": {
     "@typexs/base": "*",
-    "@typexs/server": "*",
     "@typexs/base-ng": "*",
     "@typexs/forms-ng": "*",
+    "@typexs/server": "*",
     "@typexs/storage-ng": "*"
   },
   "devDependencies": {
+    "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
-    "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/server": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/storage-ng": "*",
+    "@typexs/base": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-alpha.0",
+    "@typexs/forms-ng": "^2.2.1-alpha.0",
+    "@typexs/server": "^2.2.1-alpha.0",
+    "@typexs/storage-ng": "^2.2.1-alpha.0",
     "rxjs": "6.6.7"
   }
 }
