--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@typexs/base",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.0",
   "description": "",
   "main": "index",
   "browser": "browser",
   "scripts": {
-    "clean": "rm -r build",
-    "build": "node ../../scripts/build.js",
+    "build": "npx rollup -c",
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
   },
@@ -42,11 +41,11 @@
     "typedi": "0.8.0"
   },
   "devDependencies": {
-    "@typexs/testing": "^2.2.1-alpha.0",
     "typeorm": "0.2.34",
     "winston": "3.3.3",
     "yargonaut": "1.1.4",
-    "yargs": "17.2.1"
+    "yargs": "17.2.1",
+    "@typexs/testing": "*"
   },
   "peerDependencies": {
     "typeorm": "0.2.34",
@@ -54,7 +53,6 @@
     "yargonaut": "1.1.4",
     "yargs": "17.2.1"
   },
-  "private": true,
   "typexs": {
     "name": "base"
   }
