--- a/packages/pipelines/package.json
+++ b/packages/pipelines/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@typexs/pipelines",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.0",
   "main": "./index",
   "browser": "./browser",
   "dependencies": {
     "sha1": "^1.1.1"
   },
-  "private": true,
   "peerDependencies": {
     "@typexs/base": "*"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-alpha.0"
+    "@typexs/base": "*"
   },
   "typexs": {
     "name": "pipelines",
