--- a/packages/roles-api/package.json
+++ b/packages/roles-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles-api",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.0",
   "description": "",
   "main": "./index",
   "repository": {
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@cezaryrk/minimatch": "3.0.4"
   },
-  "private": true,
   "typexs": {
     "name": "roles-api"
   }
