--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.0",
   "description": "",
   "main": "./index",
   "browser": "./browser",
@@ -16,19 +16,18 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "^2.2.1-alpha.0",
+    "@typexs/roles-api": "*",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-alpha.0",
-    "@typexs/entity": "^2.2.1-alpha.0",
-    "@typexs/testing": "^2.2.1-alpha.0"
+    "@typexs/base": "*",
+    "@typexs/entity": "*",
+    "@typexs/testing": "*"
   },
   "peerDependencies": {
     "@typexs/base": "*",
     "@typexs/entity": "*"
   },
-  "private": true,
   "typexs": {
     "name": "roles"
   }
